--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="flex-grow: 0;">
             <div class="navbar-nav">
-              <a class="nav-item nav-link active" href="#">Features<span class="sr-only">(current)</span></a>
-              <a class="nav-item nav-link" href="#">About</a>
-              <a class="nav-item nav-link" href="#">Pricing</a>
-              <a class="nav-item nav-link" href="#">Reviews</a>
-              <a class="nav-item nav-link" href="#">Contact</a>
+              <a class="nav-item nav-link active" href="#features">Features<span class="sr-only">(current)</span></a>
+              <a class="nav-item nav-link" href="#about">About</a>
+              <a class="nav-item nav-link" href="#pricing">Pricing</a>
+              <a class="nav-item nav-link" href="#reviews">Reviews</a>
+              <a class="nav-item nav-link" href="#contact">Contact</a>
             </div>
           </div>
         </nav>
@@ -167,7 +167,7 @@
     </div>
 
     <!-- Section 2 -->
-    <div style="padding: 5em 0; background: #f5f5f5;">
+    <div id="features" style="padding: 5em 0; background: #f5f5f5;">
       <div class="container">
         <!-- Section container 2 -->
         <div style="display: flex;">
@@ -338,7 +338,7 @@
     </div>
 
     <!-- Section 5 -->
-    <div style="padding: 4em 0;">
+    <div id="about" style="padding: 4em 0;">
       <div class="container">
         <!-- Section container 5 -->
         <div style="display: flex; flex-direction: column;">
@@ -436,7 +436,7 @@
     </div>
 
     <!-- Section 6 -->
-    <div style="background: #f5f5f5; padding: 4em 0;">
+    <div id="pricing" style="background: #f5f5f5; padding: 4em 0;">
       <div class="container">
         <!-- Section container 6 -->
         <div style="display: flex; flex-direction: column;">
@@ -527,7 +527,7 @@
     </div>
 
     <!-- Section 7 -->
-    <div style="padding: 4em 0;">
+    <div id="reviews" style="padding: 4em 0;">
       <div class="container">
         <!-- Section container 7 -->
         <div style="display: flex; flex-direction: column;">
@@ -651,7 +651,7 @@
     </div>
 
     <!-- Section 9 -->
-    <div style="padding: 4em 0;">
+    <div id="contact" style="padding: 4em 0;">
       <div class="container">
         <!-- Section container 9 -->
         <div style="display: flex; flex-direction: column;">
