--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 	<script src="./app.js" defer></script>
   <title>Axit</title>
-  <link rel="icon" type="image/png" href="/images/icon.png" />
+  <link rel="icon" type="image/png" href="./images/icon.png" />
 </head>
 <body>
   <!-- Main section -->
